--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Document</title>
    <!-- JavaScript Bundle with Popper -->
    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-      <script src="app.js"></script> 
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+      <script src="app.js"> </script>
+
+
       <style>
         body{
-        background-image:url(ab.jpg);
+        background-image:url(images/ab.jpg);
         background-size:cover;
         height:1000px;
         width:100%;
@@ -32,7 +35,7 @@
                     <input type="submit" value="Convert">
                 </form><br>
                 <p id="changednum">Converted num:</p>
-            </div> 
+            </div>
           </div>
           <div class="col-2"></div>
       </div>
